refactor: fix socials and smooth scroll

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         </a>
         <ul class="ml-auto flex-row items-center font-bold">
             <li class="ml-4">
-                <a href="https://github.com/rohanmathur91" target="_blank"><i class="fa fa-github social-icons"></i></a>
+                <a href="https://github.com/rohanmathur91/css-component-library" target="_blank"><i
+                        class="fa fa-github social-icons"></i></a>
             </li>
             <li class="ml-4">
                 <a href="https://twitter.com/@rohanmathur91" target="_blank"><i
